--- a/src/components/ui/Map.astro
+++ b/src/components/ui/Map.astro
@@ -7,7 +7,7 @@ const ADDRESS = "86 Worcester Rd, Webster, MA 01570";
 
 <div
   id="map"
-  class="w-[70%] min-[600px]:w-[60%] md:w-[70%] h-[250px] md:h-[500px] rounded-2xl"
+  class="w-4/5 min-[600px]:w-[60%] md:w-[70%] h-[250px] md:h-[500px] rounded-2xl"
 >
 </div>
 
