--- a/src/constants/StoreInfo.astro
+++ b/src/constants/StoreInfo.astro
@@ -21,7 +21,7 @@ export const officialStoreInfo = () => {
   let storeInfo: StoreInfo = {
     name: "PT Pet Supply",
     address: "86 Worcester Rd, Webster",
-    phoneNumber: "508-943-9600",
+    phoneNumber: "508•943•9600",
   };
 
   return storeInfo;
