--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -26,17 +26,11 @@ const convertTo12Hour = (time24: string) => {
 
 <section
   id="contact"
-  class="flex-row-reverse md:flex md:flex-1 justify-center pt-20 md:pt-6 md:px-6 xl:px-32 2xl:px-64 bg-[#FFC66D] min-h-[750px] z-[-10]"
+  class="flex-row-reverse md:flex md:flex-1 justify-center pt-20 md:pt-6 md:px-6 xl:px-32 2xl:px-64 bg-[#FFC66D] min-h-[750px]"
 >
   <div class="relative flex-1 text-center my-auto">
     <div class="relative mx-auto">
-      <img
-        src="/src/assets/stump.png"
-        alt="Stump sign"
-        class="absolute left-14 -top-10 w-[430px] h-auto object-contain z-0 drop-shadow-2xl"
-      />
-
-      <div class="relative z-20 text-center text-white">
+      <div class="relative z-20 text-center">
         <h3 class="font-bold text-3xl pb-3 tracking-widest">Store Hours</h3>
         {
           Object.entries(storeHours).map(([day, hours]) => (
@@ -62,7 +56,7 @@ const convertTo12Hour = (time24: string) => {
     </div>
   </div>
 
-  <div class="flex flex-1 justify-center m-auto">
+  <div class="flex flex-1 justify-center my-auto">
     <Map />
   </div>
 </section>
