Additional styling for [slug].post

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -27,6 +27,6 @@
   <img
     src="/src/assets/fence.png"
     alt="Background picket fence"
-    class="absolute bottom-10 md:bottom-4 left-1/2 transform -translate-x-1/2 w-full h-[63%] max-w-none object-cover -mb-28 z-[-1]"
+    class="absolute bottom-14 md:bottom-6 left-1/2 transform -translate-x-1/2 w-full h-[63%] max-w-none object-cover -mb-28 md:-mb-36 z-[-1]"
   />
 </section>
