--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,8 +1,9 @@
 ---
 import BlogLayout from "@/components/layouts/BlogLayout.astro";
-import Button from "@/components/ui/Button.astro";
 import { getEntry } from "astro:content";
 import type { CollectionEntry } from "astro:content";
+
+const backArrow = "../../../images/arrow.svg";
 
 const { slug } = Astro.params;
 
@@ -18,39 +19,69 @@ const formatDate = (date: Date) => {
   const month = date.getMonth() + 1;
   const day = date.getDate();
   const year = date.getFullYear();
-  return `${month}-${day}-${year}`;
+  return `${month}•${day}•${year}`;
 };
 ---
 
 <BlogLayout id={post?.slug}>
-  <div class="pt-4 pl-4 flex justify-between items-start">
-    <Button
-      href="/blog"
-      text="Back to Blog Posts"
-      class="bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold py-1.5 px-3 rounded-xl no-underline"
-      data-astro-prefetch
-    />
-  </div>
+  <div class="w-[100vw] flex-col-1 justify-center">
+    <div class="pt-4 pl-4 flex justify-between items-start">
+      <button
+        class="flex items-center bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold py-1.5 px-3 rounded-xl no-underline"
+        data-astro-prefetch
+        onclick="window.location.href = '/blog'"
+      >
+        {
+          (
+            <img
+              src={backArrow}
+              alt="Back Arrow"
+              class="w-4 my-0"
+              style="filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(360deg) brightness(100%) contrast(100%);"
+            />
+          )
+        }
+        &nbsp; All Posts
+      </button>
+    </div>
 
-  <div class="pt-8">
-    <h1>{post?.data.title}</h1>
-    <img src="https://placehold.co/320x210" alt="Hashtag photo" />
+    <div class="ml-4 md:ml-12 mr-5 md:mr-16">
+      <div class="pt-8">
+        <div class="ml-4 pb-4">
+          <time class="font-bold text-lg tracking-widest">
+            {
+              post ? (
+                <div>
+                  {formatDate(post.data.publishDate)} &nbsp;
+                  <span class="text-color-[#7F0201]">|</span>&nbsp;&nbsp; PT Pet
+                  Supply
+                </div>
+              ) : (
+                "Unknown Date | PT Pet Supply"
+              )
+            }
+          </time>
+        </div>
+        <h1 class="md:tracking-wider">{post?.data.title}</h1>
+        <img
+          src="https://placehold.co/1400x250"
+          alt="Associated hashtag photo"
+        />
+      </div>
+      <div class="flex space-x-1 pb-16">
+        {
+          post?.data.tags.map((tag) => (
+            <button class="bg-[#7F0201] hover:bg-[#A52A2A] text-white text-md md:text-xl md:tracking-widest px-2 md:px-3 md:py-1 rounded-xl">
+              {tag}
+            </button>
+          ))
+        }
+      </div>
+      <article class="pb-16">
+        {Content ? <Content /> : <p>Content not available</p>}
+      </article>
+    </div>
   </div>
-  <time class="font-bold"
-    >{post ? formatDate(post.data.publishDate) : "Date not available"}</time
-  >
-  <div class="flex space-x-1">
-    {
-      post?.data.tags.map((tag) => (
-        <button class="bg-[#7F0201] hover:bg-[#A52A2A] text-white text-sm tracking-narrow px-2 rounded-xl">
-          {tag}
-        </button>
-      ))
-    }
-  </div>
-  <article>
-    {Content ? <Content /> : <p>Content not available</p>}
-  </article>
 </BlogLayout>
 
 <style>
