--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -4,6 +4,8 @@ import Button from "@/components/ui/Button.astro";
 import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
 
+const backArrow = "../../../images/arrow.svg";
+
 // Use the defined schema in content/config.ts to ensure type safety
 const posts: CollectionEntry<"blog">[] = await getCollection("blog");
 
@@ -19,14 +21,25 @@ const formatDate = (date: Date) => {
 };
 ---
 
-<BlogLayout id="blog" class="flex justify-center max-w-[1200px] mx-auto">
-  <div class="pt-4 pl-4 flex justify-between items-start">
-    <Button
-      href="/"
-      text="Back to Home"
-      class="bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold py-1.5 px-3 rounded-xl no-underline"
+<BlogLayout id="blog" class="flex justify-center mx-auto">
+  <div class="pt-4 pl-4 w-[100vw] flex justify-between items-start">
+    <button
+      class="flex items-center bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold py-1.5 px-3 rounded-xl no-underline"
       data-astro-prefetch
-    />
+      onclick="window.location.href = '/'"
+    >
+      {
+        (
+          <img
+            src={backArrow}
+            alt="Back Arrow"
+            class="w-4 my-0"
+            style="filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(360deg) brightness(100%) contrast(100%);"
+          />
+        )
+      }
+      &nbsp; Store Page
+    </button>
 
     <div class="flex-col pr-4 -mr-10 overflow-hidden">
       <h3 class="flex justify-end text-sm my-0 -mb-1.5 mr-10">Filter by:</h3>
@@ -40,39 +53,43 @@ const formatDate = (date: Date) => {
     </div>
   </div>
 
-  <div class="flex flex-col justify-center px-4 pt-6 pb-16 space-y-4">
-    {
-      posts.map((post) => (
-        <div class="relative flex flex-col w-[320px] min-[450px]:w-[400px] md:w-[320px] rounded-3xl border bg-[#F9DCB1]">
-          <img
-            src="https://placehold.co/320x210"
-            alt="Hashtag photo"
-            class="rounded-t-3xl my-0"
-          />
-          <div class="py-2 px-4 rounded-xl">
-            <a
-              href={`/blog/${post.slug}/`}
-              class="font-bold no-underline text-lg tracking-widest"
-            >
-              {post.data.title}
-            </a>
-            <time class="absolute bottom-0 right-3 text-sm tracking-wider font-bold mb-2">
-              {formatDate(new Date(post.data.publishDate))}
-            </time>
-            <div class="flex space-x-1">
-              {post.data.tags.map((tag) => (
-                <button class="bg-[#7F0201] hover:bg-[#A52A2A] text-white text-sm tracking-narrow px-2 rounded-xl">
-                  {tag}
-                </button>
-              ))}
+  <div class="flex justify-center w-[100vw]">
+    <div
+      class="grid min-[690px]:grid-cols-2 lg:grid-cols-3 min-[1350px]:grid-cols-4 gap-4 place-items-center sm:w-[690px] lg:w-[1020px] min-[1350px]:w-[1340px] px-4 pt-6 pb-16"
+    >
+      {
+        posts.map((post) => (
+          <div class="relative flex flex-col w-[320px] min-[450px]:w-[400px] min-[690px]:w-[320px] lg:w-[320px] rounded-3xl border bg-[#F9DCB1]">
+            <img
+              src="https://placehold.co/320x210"
+              alt="Hashtag photo"
+              class="rounded-t-3xl my-0"
+            />
+            <div class="py-2 px-4 rounded-xl">
+              <a
+                href={`/blog/${post.slug}/`}
+                class="font-bold no-underline text-lg tracking-widest"
+              >
+                {post.data.title}
+              </a>
+              <time class="absolute bottom-0 right-3 text-sm tracking-wider font-bold mb-2">
+                {formatDate(new Date(post.data.publishDate))}
+              </time>
+              <div class="flex space-x-1">
+                {post.data.tags.map((tag) => (
+                  <button class="bg-[#7F0201] hover:bg-[#A52A2A] text-white text-sm tracking-narrow px-2 rounded-xl">
+                    {tag}
+                  </button>
+                ))}
+              </div>
             </div>
+            <p class="min-h-[70px] mt-2 mx-2 leading-5">
+              {post.data.description}
+            </p>
           </div>
-          <p class="min-h-[70px] mt-2 mx-2 leading-5">
-            {post.data.description}
-          </p>
-        </div>
-      ))
-    }
+        ))
+      }
+    </div>
   </div>
 </BlogLayout>
 
