--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -12,15 +12,15 @@ const address = officialStoreInfo().address;
 ---
 
 <section
-  class="flex w-full min-h-[35px] font-bold mx-auto px-4 xl:px-10 pt-3 xl:pt-6 pb-2 xl:pb-5 bg-[#FFC66D]"
+  class="flex w-full min-h-[35px] font-bold mx-auto px-4 xl:px-12 min-[1650px]:px-32 2xl:px-18 pt-3 xl:pt-6 pb-2 xl:pb-5 bg-[#FFC66D]"
 >
   <div
-    class="my-auto flex-1 flex items-start xl:items-center text-sm lg:text-lg xl:pl-0 pt-1 -mr-10 2xl:ml-16"
+    class="my-auto flex-1 flex items-start xl:items-center text-sm min-[520px]:text-lg xl:pl-0 pt-1 -mr-10 2xl:ml-16"
   >
     <!-- Phone Section -->
     <a
       href={`tel:${phoneNumber}`}
-      class="pl-2 min-[450px]:pl-3 pr-1 sm:pr-2 sm:mt-0.5 xl:-mt-1 h-[16px] sm:h-[20px] xl:h-[32px]"
+      class="pl-2 min-[450px]:pl-3 pr-1 sm:pr-2 sm:mt-0.5 min-[520px]:mt-1 xl:-mt-1 h-[16px] sm:h-[20px] xl:h-[32px]"
     >
       <img src={phone.src} alt="phone" class="h-full" />
     </a>
@@ -32,7 +32,7 @@ const address = officialStoreInfo().address;
 
     <!-- Address Section -->
     <a
-      href="https://www.google.com/maps/place/P+T+Pet+Supply/@42.0714526,-71.8662691,17z"
+      href="https://www.google.com/maps/place/P+T+Pet+Supply/@42.0714526,-71.8662691,17z/data=!4m6!3m5!1s0x89e41ed7234c136d:0xe30644b400274c0!8m2!3d42.0714526!4d-71.8662691!16s%2Fg%2F1tt1tq6m?entry=ttu&g_ep=EgoyMDI0MTAxNC4wIKXMDSoASAFQAw%3D%3D"
       target="_blank"
       rel="noopener noreferrer"
       class="flex items-center sm:text-lg"
