--- a/src/components/sections/Blog.astro
+++ b/src/components/sections/Blog.astro
@@ -25,7 +25,9 @@ const recentPosts = uniquePosts.slice(0, 3);
 ---
 
 <section class="mx-10 py-16 lg:py-24">
-  <h3 class="lg:mx-24 pb-3 font-bold text-2xl lg:text-3xl tracking-widest">
+  <h3
+    class="text-center mx-auto pb-6 font-bold text-2xl lg:text-3xl tracking-widest"
+  >
     Recent Blog Posts
   </h3>
 
