--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -5,6 +5,6 @@
 <section class="py-6 bg-[#FFC66D] -mt-1">
   <h3 class="flex justify-center text-widest text-base pt-6 md:text-xl">
     Designed and Developed by&nbsp;
-    <a href="https://www.jdegaetano.com">Justin DeGaetano</a>
+    <a href="https://www.jdegaetano.com" target="_blank">Justin DeGaetano</a>
   </h3>
 </section>
