Implement blog post filter

--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -2,9 +2,14 @@
 
 ---
 
-<section class="py-6 bg-[#FFC66D] -mt-1">
-  <h3 class="flex justify-center text-widest text-base pt-6 md:text-xl">
-    Designed and Developed by&nbsp;
-    <a href="https://www.jdegaetano.com" target="_blank">Justin DeGaetano</a>
+<section class="text-center py-6 bg-[#FFC66D] -mt-1">
+  <div class="font-bold tracking-widest">
+    <h2 class="text-lg pt-4 md:text-xl">PT Pet Supply</h2>
+    <h3 class="text-sm md:text-md">Serving The Community Since 2003</h3>
+  </div>
+  <h3 class="text-widest text-base pt-3 md:text-lg">
+    <a href="https://www.jdegaetano.com" target="_blank"
+      >Designed and Developed by Justin DeGaetano</a
+    >
   </h3>
 </section>
