--- a/src/components/sections/Blog.astro
+++ b/src/components/sections/Blog.astro
@@ -24,7 +24,7 @@ const uniquePosts = Array.from(new Set(sortedPosts.map((post) => post.slug)))
 const recentPosts = uniquePosts.slice(0, 3);
 ---
 
-<section class="mx-10 py-16 lg:py-24">
+<section class="mx-10 py-16 lg:py-24 drop-shadow-2xl">
   <h3
     class="text-center mx-auto pb-6 font-bold text-2xl lg:text-3xl tracking-widest"
   >
